# Lance

./: .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  lance.db  pyproject.toml  run_scan.py
.github/workflows/: lance-scan.yml
dashboard/: index.html
lance/: __init__.py  config.py
lance/api/: app.py
lance/api/routers/: campaigns.py  findings.py  reports.py  system.py
lance/attacks/: module_factory.py
lance/attacks/bias/: module.py  payloads.yaml
lance/attacks/custom/: vulnerability.py
lance/attacks/data_exfiltration/: module.py  payloads.yaml
lance/attacks/jailbreak/: module.py  payloads.yaml
lance/attacks/misinformation/: module.py  payloads.yaml
lance/attacks/model_dos/: module.py  payloads.yaml
lance/attacks/pii_leakage/: module.py  payloads.yaml
lance/attacks/prompt_injection/: module.py  payloads.yaml
lance/attacks/rag_poisoning/: module.py  payloads.yaml
lance/attacks/toxicity/: module.py  payloads.yaml
lance/chains/: engine.py
lance/chains/templates/: context_poisoning.yaml  crescendo.yaml  jailbreak_escalation.yaml  linear_jailbreak.yaml  memory_exploitation.yaml  persona_anchoring.yaml
lance/cli/: main.py
lance/config_runner/: example_config.yaml  runner.py
lance/db/: models.py  schemas.py
lance/engine/: orchestrator.py
lance/engine/connectors/: litellm_connector.py
lance/engine/mutators/: payload_mutator.py
lance/guardrails/: engine.py
lance/reporting/: comparison.py
lance/scoring/: llm_judge.py
lance/ui/: __init__.py  server.py
reports/templates/: report.html
tests/: test_core.py
(+6 files in other folders)
